--- a/html/layout04.html
+++ b/html/layout04.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout 03</title>
-    <link rel = "stylesheet" href="./layout03.css">
+    <title>layout 04</title>
+    <link rel="stylesheet" href="./layout04.css">
 </head>
 <body>
-    <div class="warp">
+    <div class="wrap">
         <div class="header">header</div>
         <div class="contents">
-            <div class="menu">aside</div>
             <div class="main">contents</div>
-            <!-- 시멘틱태그 메인은 한번만씀 -->
+            <div class="menu">aside</div>
         </div>
         <div class="footer">footer</div>
     </div>
+    
 </body>
 </html>
