layout4장까지 연습

--- a/html/layout02_1.html
+++ b/html/layout02_1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout01_1 html</title>
-    <link rel="stylesheet" href="./layout01_1.css">
+    <title>layout02_1</title>
+    <link rel="stylesheet" href="./layout02_1.css">
 </head>
 <body>
     <div class="wrap">
