--- a/html/layout03_1.html
+++ b/html/layout03_1.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>layout01_1 html</title>
-    <link rel="stylesheet" href="./layout01_1.css">
+    <title>layout03_1</title>
+    <link rel="stylesheet" href="layout03_1.css">
 </head>
 <body>
     <div class="wrap">
         <div class="header">header</div>
-        <div class="contents">contents</div>
+        <div class="contents">
+            <div class="menu">aside</div>
+            <div class="main">contents</div>
+        </div>
         <div class="footer">footer</div>
     </div>
     
